# handshake-atlas

./: .gitignore  README.md  pyproject.toml
docs/: COURTSHIP.md  LEARNINGS.md  METHODS.md  ORIGINALITY.md
paper/: BRIEF.md  README.md  main.tex  references.bib  sec_intro_background.tex  sec_method_taxonomy.tex  sec_results.tex
src/handshake_atlas/: __init__.py  atlas.py  cli.py  cluster.py  courtship.py  enumerate.py  evolution.py  handshake.py  profile.py
src/handshake_atlas/invariants/: __init__.py  autocorrelation.py  complexity.py  distance.py  overlap.py
tests/: test_automaton.py  test_courtship.py  test_evolution.py  test_handshake.py  test_invariants.py
web/: .vercelignore  app.js  courtship.html  courtship.js  evolution.html  evolution.js  index.html  play.js  style.css
web/data/: atlas.json
